# document-server

./: .env  .gitignore  Cargo.toml  README.md
migrations/2022-02-21-193520_create_documents/: down.sql  up.sql
src/: cmols_documents.rs  main.rs  models.rs  schema.rs
