[package]
name = "document-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
log = "0.4.0"
env_logger = "0.9.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
bytes = { version = "1", features = ["serde"] }
serde = "1"
serde_json = "1"
diesel = { version = "1.4.4", features = ["sqlite", "uuidv07", "r2d2"] }
dotenv = "0.15.0"
libsqlite3-sys = { version = ">=0.8.0, <0.13.0", features = ["bundled"] }